# vuanem-fb-ads-insights

./: .gcloudignore  .gitignore  Dockerfile  Pipfile  README.md  assertions.py  broadcast.py  broadcaster.py  config.json  docker-compose.yml  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sample.json  tasks.py  test_integrations.py  test_requests.py  test_units.py  tsconfig.build.json  tsconfig.json  update.sql.j2
configs/: AdsCreatives.json  AdsInsights.json  AdsInsights_AgeGenders.json  AdsInsights_CountryRegion.json  AdsInsights_Devices.json  AdsInsights_Hourly.json  config.json  config_Ads.json  config_AdsCreatives.json  config_AgeGenders.json  config_CountryRegion.json  config_Creatives.json  config_Devices.json  config_Hourly.json
controller/: bigquery.py  facebook.py  pipelines.py  tasks.py
db/: bigquery.py
facebook/: facebook_controller.py  facebook_repo.py  facebook_service.py
models/: AdsInsights.py  AdsInsights_Region.py  models.py
procedure/: _update_Ads_Insights.sql
schemas/: AdsCreatives.json  AdsInsights.json  AdsInsights_AgeGenders.json  AdsInsights_CountryRegion.json  AdsInsights_Devices.json  AdsInsights_Hourly.json
secret_manager/: cloud_secret_manager.py
src/: bigquery.service.ts  cloud-tasks.service.ts  index.ts  logging.service.ts  secret-manager.service.ts
tasks/: cloud_tasks.py  tasks_service.py
templates/: read_latest_ids.sql.j2  update_from_stage.sql.j2
test/: test_broadcast_auto.py  test_broadcast_manual.py  test_units.py  test_units_auto.py  test_units_manual.py  utils.py
(+24 files in other folders)
